<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.bankqueue.LoginScreen"
    android:focusable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/pnumber"
        android:layout_marginTop="147dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/pnum"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/pnumber"
        android:layout_alignEnd="@+id/pnumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/in"
        android:id="@+id/InBtn"
        android:layout_marginTop="24dp"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:background="#c7c7c7"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="login"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/reg"
        android:id="@+id/RegBtn"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:background="#c7c7c7"
        android:layout_alignBottom="@+id/InBtn"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:onClick="Registration"/>
</RelativeLayout>
