<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.bankqueue.finish"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="32sp"
        android:id="@+id/Label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp"
        android:id="@+id/otd"
        android:layout_below="@+id/Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/goal"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="32sp"
        android:id="@+id/goalLabel"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/otd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/goalText"
        android:layout_below="@+id/goalLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="32sp"
        android:id="@+id/DateLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="22sp"
        android:id="@+id/datepicker"
        android:layout_below="@+id/DateLabel"
        android:layout_alignRight="@+id/otd"
        android:layout_alignEnd="@+id/otd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="32sp"
        android:id="@+id/timeLabel"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/datepicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/timepicker"
        android:textSize="22sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/timeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Thanks"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="32sp"/>

</RelativeLayout>
